--- a/app/styles/directives/videoItem.scss
+++ b/app/styles/directives/videoItem.scss
@@ -4,7 +4,9 @@
 	padding:20px 10px;
 	width: 767px;
 	height: 300px;
-	border:1px solid #CCC;
+	border:1px solid black;
+	border-radius:5px;
+	background-color:white;
 	.tile{
 		float:left;
 		position:relative;
@@ -12,7 +14,7 @@
 		img{
 			width:420px;
 			height:263px;
-			border:1px solid #CCC;
+			border:1px solid black;
 		}
 	}
 	.text-desc{
@@ -66,7 +68,7 @@
 /* Responsive: Landscape Tablets */
 @media screen and (max-width: 991px) {
 	.video-item{
-		margin:10px auto;
+		margin:15px auto;
 		padding:10px 8px;
 		width: 750px;
 		height:260px;
@@ -112,7 +114,7 @@
 /* Responsive: Portrait Tablets */
 @media screen and (max-width: 767px) {
 	.video-item{
-		margin:10px auto;
+		margin:15px auto;
 		padding:20px 10px;
 		width: 480px;
 		height: 370px;
