--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,18 +1,18 @@
-<div class="list-view" ng-hide="isOnDetailView">
+<div class="list-view form-inline" ng-hide="isOnDetailView">
 	<h2>My YouTube playlist</h2>
 	
-	<div class="list-length">
-		<label>Items per page : </label>
-		<select ng-options="o for o in lengthOptions" ng-model="playlistLength" ng-change="changeLength()"></select>
+	<div class="list-length form-group">
+		<label for="playlistLength">Items per page : </label>
+		<select class="form-control" id="playlistLength" ng-options="o for o in lengthOptions" ng-model="playlistLength" ng-change="changeLength()"></select>
 	</div>
 	<div class="pagination">
-		<button class="btn" ng-click="prevPage()" ng-show="prevToken">Previous</button>
+		<button class="btn btn-info" ng-click="prevPage()" ng-show="prevToken">Previous</button>
 	</div>
 	<div ng-repeat="item in playlist">
 		<video-item item="item"></video-item>
 	</div>
 	<div class="pagination">
-		<button class="btn" ng-click="nextPage()" ng-show="nextToken">Next</button>
+		<button class="btn btn-info" ng-click="nextPage()" ng-show="nextToken">Next</button>
 	</div>
 </div>
 	
